kubernetes/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: service-b:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
